# signal-noise

./: .gitignore  AGENTS.md  DESIGN.md  README.md  pyproject.toml
config/: suppressions.toml
scripts/: collect_all.sh  collect_hourly.sh  setup-production.sh  signal-noise-scheduler.service  signal-noise.service
src/signal_noise/: __main__.py  cli.py  cli_commands.py  client.py  config.py  suppression_registry.py  transforms.py
src/signal_noise/analysis/: quality.py  spectrum.py
src/signal_noise/api/: app.py  ops_ui.py
src/signal_noise/collector/: __init__.py  _auth.py  _cache.py  _gdelt_throttle.py  _lazy.py  _loader.py  _manifest.py  _registry.py  _utils.py  aaii_sentiment.py  acled.py  alpha_factors.py  alternative_btc_dominance.py  appstore_rank.py  archive_org.py  arxiv.py  aviation.py  base.py  bea_generic.py  berkeley_earth.py  binance_futures.py  binance_oi.py  binance_ws.py  bis_property.py  bitfinex_longs_shorts.py  blockchain_charts.py  bls_generic.py  bluesky.py  boc_generic.py  boe_generic.py  boj_rates.py  btc_dominance.py  btc_ohlcv.py  caiso.py  cboe_vix.py  ccxt_generic.py  cdc_excess_deaths.py  cdc_flu.py  (+237 more)
tests/: conftest.py  test_alpha_factors.py  test_analysis.py  test_api.py  test_aviation_collectors.py  test_base_collector.py  test_bea_generic.py  test_binance_futures.py  test_binance_ws.py  test_bls_generic.py  test_caiso.py  test_census_generic.py  test_cftc_cot_collectors.py  test_cli_scheduler_filters.py  test_client.py  test_client_ws.py  test_climate_collectors.py  test_cloud_status_collectors.py  test_congress.py  test_corrections.py  test_cross_exchange.py  test_crypto_alpha_factors.py  test_defillama_collectors.py  test_deribit_options.py  test_digital_onchain_collectors.py  test_eia_generic.py  test_ember_electricity.py  test_entertainment_collectors.py  test_entsoe.py  test_eurostat_generic.py  test_event_bus.py  test_fbi_crime.py  test_finnhub_breadth.py  test_finnhub_generic.py  test_finra_short_volume.py  test_fred_generic.py  test_gbif.py  test_gdelt.py  test_generic_collectors.py  test_government_collectors.py  (+40 more)
(+12 files in other folders)
