[project]
name = "signal-noise"
version = "0.1.0"
description = "Collect worldwide time series and deliver via REST API"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "requests>=2.28",
    "ccxt>=4.0",
    "yfinance>=0.2",

    "numpy>=1.24",
    "scipy>=1.10",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=14.0",
    "vaderSentiment>=3.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.9",
    "httpx>=0.27",
]
trends = [
    "pytrends>=4.9",
]
